[project]
name = "transactions-analysis-widget"
version = "0.1.0"
description = ""
authors = [
    {name = "Сергей Карсканов",email = "kapckahob97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.black]
line-length = 119
exclude = '''
(
  | \.git
  | htmlcov\
)
'''


[tool.isort]
line_length = 119


[tool.mypy]
python_version = ">=3.13.2"
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "tests/",
    ".venv/",
    "htmlcov/",
    "conftest.py",
    "main.py"
    ]
